<resources>
    <string name="app_name">Geo Location Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="pref_interval">Update Interval</string>
    <string name="pref_interval_summary">How often to record location (seconds)</string>
    <string name="pref_auto_start">Auto-start on Boot</string>
    <string name="pref_auto_start_summary">Resume tracking after device restarts</string>
    <string name="pref_history_limit">History Limit</string>
    <string name="pref_history_limit_summary">Maximum number of points to keep</string>
    <string name="pref_maps_key">Google Maps API Key</string>
    <string name="pref_maps_key_summary">Enter your Maps API key</string>
    <string name="pref_category_tracking">Tracking</string>
    <string name="pref_category_storage">Storage</string>
    <string name="pref_category_about">About</string>
    <string name="pref_version">Version</string>
    <string name="app_version">1.0.0</string>
</resources>
