<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_tracking">

        <ListPreference
            app:key="pref_interval"
            app:title="@string/pref_interval"
            app:summary="@string/pref_interval_summary"
            app:entries="@array/interval_entries"
            app:entryValues="@array/interval_values"
            app:defaultValue="5"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="pref_auto_start"
            app:title="@string/pref_auto_start"
            app:summary="@string/pref_auto_start_summary"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_storage">

        <ListPreference
            app:key="pref_history_limit"
            app:title="@string/pref_history_limit"
            app:summary="@string/pref_history_limit_summary"
            app:entries="@array/history_limit_entries"
            app:entryValues="@array/history_limit_values"
            app:defaultValue="1000"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_about">

        <Preference
            app:key="pref_version"
            app:title="@string/pref_version"
            app:summary="@string/app_version"
            android:selectable="false"/>

    </PreferenceCategory>

</PreferenceScreen>
